--- a/GitHubClientCli/GitHubClientCli.csproj
+++ b/GitHubClientCli/GitHubClientCli.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataModel\Domain.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\GitHubAPI\GitHubAPI.csproj" />
   </ItemGroup>
 
