--- a/ServiceInterfaces/ServiceInterfaces.csproj
+++ b/ServiceInterfaces/ServiceInterfaces.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataModel\Domain.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
