--- a/WebUIService/WebUIService.csproj
+++ b/WebUIService/WebUIService.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\GitHubAPI\GitHubAPI.csproj" />
     <ProjectReference Include="..\ServiceDiscovery\ServiceDiscovery.csproj" />
     <ProjectReference Include="..\ServiceInterfaces\ServiceInterfaces.csproj" />
